[project]
name = "drxtract"
description = "Macromedia/Adobe DIR and DRX extraction package"
version = "0.1.3"
authors = [
    { name = "Abraham Macias Paredes", email = "system252001@yahoo.es" }
]
dependencies = [

]
readme = "README.md"
requires-python = ">=3.10.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]


[project.optional-dependencies]
tests = [
  'pytest >= 6.2.5',
  'parameterized >= 0.8.1',
]

[project.urls]
"Homepage" = "https://github.com/System25/drxtract"
"Bug Tracker" = "https://github.com/System25/drxtract/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bitd2bmp = "drxtract.bitd2bmp:main"
casxtract = "drxtract.casxtract:main"
clut2json = "drxtract.clut2json:main"
drxtract = "drxtract.drxtract:main"
fmapxtract = "drxtract.fmapxtract:main"
lscr2js = "drxtract.lscr2js:main"
lscr2lingo = "drxtract.lscr2lingo:main"
riffxtract = "drxtract.riffxtract:main"
rte22bmp = "drxtract.rte22bmp:main"
snd2wav = "drxtract.snd2wav:main"
vwlbxtract = "drxtract.vwlbxtract:main"
vwscxtract = "drxtract.vwscxtract:main"
